--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     reviewers:
       - "ch1seL"
     open-pull-requests-limit: 1
@@ -15,7 +15,7 @@ updates:
   - package-ecosystem: "nuget"
     directory: "/src"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
     reviewers:
       - "ch1seL"
     open-pull-requests-limit: 1
