--- a/src/EidolonicBot/appsettings.json
+++ b/src/EidolonicBot/appsettings.json
@@ -26,7 +26,7 @@
       "Args": {
         "path": "./logs/log.json",
         "rollingInterval": "Day",
-        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        "formatter": "Serilog.Formatting.Json.JsonFormatter"
       }
     }
   },
