--- a/src/EidolonicBot/appsettings.Development.json
+++ b/src/EidolonicBot/appsettings.Development.json
@@ -11,11 +11,13 @@
       "Default": "Verbose"
     },
     "WriteTo:Console": {
+      "Name": "Console",
       "Args": {
         "restrictedToMinimumLevel": "Verbose"
       }
     },
     "WriteTo:File": {
+      "Name": "File",
       "Args": {
         "restrictedToMinimumLevel": "Verbose"
       }
