--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -45,14 +45,14 @@
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageVersion Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageVersion Include="Serilog.Sinks.NewRelic.Logs" Version="1.3.0" />
-    <PackageVersion Include="Serilog.Sinks.XUnit" Version="3.0.19" />
     <PackageVersion Include="Telegram.Bot" Version="22.3.0" />
-    <PackageVersion Include="xunit" Version="2.9.3" />
+    <PackageVersion Include="xunit.analyzers" Version="1.19.0" />
     <PackageVersion Include="Xunit.DependencyInjection" Version="10.1.1" />
     <PackageVersion Include="Xunit.DependencyInjection.Logging" Version="10.0.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
+    <PackageVersion Include="xunit.v3" Version="1.0.1" />
   </ItemGroup>
 </Project>
