--- a/src/Tests.props
+++ b/src/Tests.props
@@ -10,8 +10,11 @@
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="Serilog.Extensions.Hosting" />
-        <PackageReference Include="Serilog.Sinks.XUnit" />
-        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.v3" />
+        <PackageReference Include="xunit.analyzers">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="xunit.runner.visualstudio">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -27,6 +30,5 @@
         <Using Include="Microsoft.Extensions.DependencyInjection" />
         <Using Include="Serilog" />
         <Using Include="Xunit" />
-        <Using Include="Xunit.Abstractions" />
     </ItemGroup>
 </Project>
