--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -10,7 +10,6 @@
     <PackageVersion Include="EverscaleNet.Client" Version="1.49.1" />
     <PackageVersion Include="EverscaleNet.TestSuite" Version="1.49.1" />
     <PackageVersion Include="EverscaleNet.Utils" Version="1.49.1" />
-    <PackageVersion Include="FluentAssertions" Version="7.2.0" />
     <PackageVersion Include="MassTransit" Version="8.4.0" />
     <PackageVersion Include="MassTransit.Abstractions" Version="8.4.0" />
     <PackageVersion Include="MassTransit.Analyzers" Version="8.4.0">
@@ -45,6 +44,7 @@
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageVersion Include="Serilog.Sinks.NewRelic.Logs" Version="1.3.0" />
+    <PackageVersion Include="Shouldly" Version="4.3.0" />
     <PackageVersion Include="Telegram.Bot" Version="22.5.1" />
     <PackageVersion Include="xunit.analyzers" Version="1.21.0" />
     <PackageVersion Include="Xunit.DependencyInjection" Version="10.4.0" />
