--- a/src/Tests.props
+++ b/src/Tests.props
@@ -5,11 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" />
         <PackageReference Include="Serilog.Extensions.Hosting" />
+        <PackageReference Include="Shouldly" />
         <PackageReference Include="xunit.v3" />
         <PackageReference Include="xunit.analyzers">
             <PrivateAssets>all</PrivateAssets>
@@ -26,9 +26,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="FluentAssertions" />
         <Using Include="Microsoft.Extensions.DependencyInjection" />
         <Using Include="Serilog" />
+        <Using Include="Shouldly" />
         <Using Include="Xunit" />
     </ItemGroup>
 </Project>
