--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,13 +34,10 @@ jobs:
       - uses: actions/checkout@v5
 
       - uses: actions/setup-dotnet@v5
-
-      - uses: actions/cache@v4
         with:
-          path: ~/.nuget/packages
-          key: nuget-${{ steps.cache-month.outputs.dateYYYYMM }}-${{ hashFiles('src/Directory.Packages.props') }}
-          restore-keys: |
-            nuget-${{ steps.cache-month.outputs.dateYYYYMM }}-
+          global-json-file: src/global.json
+          cache: true
+          cache-dependency-path: src/Directory.Packages.props
 
       - name: Build
         working-directory: src
